--- a/Doan1/Doan1/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Doan1/Doan1/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
                                 <a >@Html.ActionLink("Quản lý khách hàng", "Index", "Customer")</a>
                             </li>
                             <li>
-                                <a href="#">Quản lý nhân viên</a>
+                                <a >@Html.ActionLink("Quản lý nhân viên", "Index", "Staff")</a>
                             </li>
                         </ul>
 
