--- a/Doan1/Doan1/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Doan1/Doan1/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -9,11 +9,11 @@
     <!-- Font awesome -->
     @*<link href="~/Content/bootstrap.min.css" rel="stylesheet" />*@
     <link rel="stylesheet" href="~/Assets/admin/fontawesome/css/all.css">
-     @*Main CSS*@ 
+    @*Main CSS*@
     <link href="~/Assets/admin/css/admin4b.min.css" rel="stylesheet">
     <link href="~/Assets/admin/css/custom.css" rel="stylesheet">
-    
-   
+    <link href="~/Content/stylebyme.css" rel="stylesheet" />
+
 </head>
 
 <body>
