--- a/Doan1/Doan1/Areas/Admin/Views/Product/Index.cshtml
+++ b/Doan1/Doan1/Areas/Admin/Views/Product/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@model PagedList.IPagedList<Model.EF.Product>
-@using PagedList.Mvc;
+﻿@model List<Model.EF.Product>
+
 @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
@@ -14,18 +14,6 @@
 
 <div>
     <p>
-        @*@using (Html.BeginForm("Index", "Product", FormMethod.Get))
-        {
-            <div style="width:100%; height:50px; " id="search">
-
-
-                <input type="text" value="@ViewBag.SearchString" name="searchString" style="width:20%; height:50px; margin-left:1100px; margin-right:20px;" />
-                <button type="submit" class="btn btn-secondary" style="height:50px;">Tìm Kiếm</button>
-
-
-
-            </div>
-        }*@
         <buton class="btn btn-info">
             @Html.ActionLink("Thêm mới", "Create")
         </buton>
@@ -50,7 +38,6 @@
             <th style="border: 1px solid #ccc;">
                 Hình ảnh
             </th>
-
             <th style="border: 1px solid #ccc;">
                 Giá
             </th>
@@ -78,10 +65,10 @@
             <th style="border: 1px solid #ccc;">
                 Màu sắc
             </th>
-            <th style="border: 1px solid #ccc;">
+            @*<th style="border: 1px solid #ccc;">
                 Trạng thái
-            </th>
-            <th style="border: 1px solid #ccc;">
+            </th>*@
+            <th style="border: 1px solid #ccc; width:250px;">
                 Xử lý
             </th>
         </tr>
@@ -98,14 +85,12 @@
                 <td style="border: 1px solid #ccc;">
                     @item.NameProduct
                 </td>
-                <td style="border: 1px solid #ccc;">
-                    @item.NameProduct
-                </td>
+                
                 <td style="border: 1px solid #ccc;">
                     @item.Decription
                 </td>
                 <td style="border: 1px solid #ccc;">
-                    @item.Image
+                    <img src="~/Images/Product/@item.Image" class="img_grid" />
                 </td>
                 <td style="border: 1px solid #ccc;">
                     @item.Price
@@ -123,7 +108,7 @@
                     @item.CreateDay
                 </td>
                 <td style="border: 1px solid #ccc;">
-                    @item.IsSupplier
+                    @item.IdSupplier
                 </td>
                 <td style="border: 1px solid #ccc;">
                     @item.IdCategory
@@ -134,25 +119,18 @@
                 <td style="border: 1px solid #ccc;">
                     @item.IdColor
                 </td>
-                <td style="border: 1px solid #ccc;">
+                @*<td style="border: 1px solid #ccc;">
                     @item.Status
-                </td>
-                <td>
-                    @Html.ActionLink("Sửa", "Edit", new { id = item.IdProduct }) |
-                    @Html.ActionLink("Chi tiết", "Details", new { id = item.IdProduct }) |
-                    @Html.ActionLink("Xóa", "Delete", new { id = item.IdProduct })
+                </td>*@
+                <td style="border: 1px solid #ccc;">
+                    @Html.ActionLink("Sửa", "Edit", new { id = item.IdProduct }, new { @class = "btn btn-warning" }) |
+                    @Html.ActionLink("Chi tiết", "Details", new { id = item.IdProduct }, new { @class = "btn btn-info" }) |
+                    @Html.ActionLink("Xóa", "Delete", new { id = item.IdProduct }, new { @class = "btn btn-danger" })
                 </td>
             </tr>
         }
     </tbody>
 </table>
-<div style="display:none;">
-
-    Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
-
-    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, @searchString = @ViewBag.SearchString }))
-</div>
-
 
 @section Scripts {
 <script src="//cdn.datatables.net/1.10.22/js/jquery.dataTables.min.js" type="text/javascript"></script>
