--- a/Doan1/Doan1/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Doan1/Doan1/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -146,10 +146,11 @@
     </div>
 
     <!-- Main js -->
+    @Scripts.Render("~/bundles/jquery")
     <script src="~/Assets/admin/js/jquery-3.4.1.min.js"></script>
     @*<script src="~/Assets/admin/vendor/jquery/jquery.min.js"></script>*@
     <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
-    @*<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>*@
+    <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
 
     <script src="~/Assets/admin/js/admin4b.min.js"></script>
     @*Function template file*@
