--- a/Doan1/Doan1/Views/Shared/_Layout.cshtml
+++ b/Doan1/Doan1/Views/Shared/_Layout.cshtml
@@ -14,45 +14,100 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header style="position:relative;" class="header fixed-top">
         <!-- Navigation -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <nav class="navbar navbar-expand-lg navbar-navbar-white  bg-blue fixed-top" style="background:blue; color:white!important;">
             <div class="container">
-                <a class="navbar-brand" href="@Url.Action("Index","Home")" style="font-weight:bold">BUI SHOES SHOP</a>
+                <a class="navbar-brand" href="@Url.Action("Index","Home")" style="font-weight:bold;color:white!important;font-family: 'Kaushan Script', cursive">BUI SHOES SHOP</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="@Url.Action("Index","Home")">
+                            <a class="nav-link" style="color: white !important;" href="@Url.Action("Index","Home")">
                                 Trang Chủ
                                 <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="@Url.Action("About","Home")">About</a>
+                            <a class="nav-link" style="color: white !important;" href="@Url.Action("About","Home")">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="@Url.Action("Services","Home")">Tin Tức</a>
+                            <a class="nav-link" style="color: white !important;" href="@Url.Action("Services","Home")">Tin Tức</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="@Url.Action("Contact","Home")">Contact</a>
+                            <a class="nav-link" style="color: white !important;" href="@Url.Action("Contact","Home")">Contact</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="color: white !important;" href="@Url.Action("Contact","Home")">Đăng ký</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" style="color: white !important;" href="@Url.Action("Contact","Home")">Đăng nhập</a>
+                        </li>
+                        <!-- Nav Item - User Information -->
+                        <li class="nav-item dropdown no-arrow" style="margin-left:150px; display:none;" >
+                            <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <img class="img-profile rounded-circle" src="~/Images/EmployeeImage.png">
+                                <span class="mr-2 d-none d-lg-inline text-gray-600 small" style="margin-left:10px; padding:5px">Username</span>
+
+                            </a>
+                            <!-- Dropdown - User Information -->
+                            <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
+                                <a class="dropdown-item" href="#">
+                                    <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Thông tin tài khoản
+                                </a>
+
+                                <a class="dropdown-item" href="#">
+                                    <i class="fas fa-list fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Đơn mua hàng
+                                </a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#logoutModal">
+                                    <i class="fas fa-sign-out-alt fa-sm fa-fw mr-2 text-gray-400"></i>
+                                    Đăng xuất
+                                </a>
+                            </div>
                         </li>
                     </ul>
                 </div>
             </div>
+
+
+        </nav>
+        <nav class="navbar navbar-expand-lg navbar-blue bg-blue " style="align-content:center; height:70px;background:blue; color:white; position:fixed;width:100%; ">
+            <form class="d-none d-sm-inline-block form-inline mr-auto ml-md-3 my-2 my-md-0 mw-100 navbar-search" >
+                <div class="input-group">
+                    <input type="text" class="form-control bg-light border-0 " style="width:700px;margin-left:500px;height:50px;" placeholder="Search for..." aria-label="Search" aria-describedby="basic-addon2">
+                    <div class="input-group-append">
+                        <button class="btn btn-primary" type="button" style="height:50px;width:50px;" >
+                            <img src="~/Images/search--v2.png" style="height:30px;width:30px;"/>
+                            
+                        </button>
+                    </div>
+                    <div style="margin-left:50px; ">
+
+                        <img src="~/Images/giohang.png" style="height:30px;width:30px;"/>
+                    </div>
+
+                </div>
+                
+               
+            </form>
+            
+            
         </nav>
     </header>
     <main>
-        <div class="container body-content">
+        <div class="container body-content" style="margin-top:50px">
             @RenderBody()
         </div>
     </main>
     <!-- Footer -->
-    <footer class="py-5 bg-dark">
+    <footer class="py-5 bg-blue" style="background:blue; color:white;">
         <section>
-            <p class="m-0 text-center text-white">Copyright &copy; Đỗ Thu Hà/p>
+            <p class="m-0 text-center text-white ">Copyright &copy; Đỗ Thu Hà</p>
         </section>
     </footer>
     <!-- Bootstrap core JavaScript -->
