--- a/Doan1/Doan1/Areas/Admin/Views/Product/Index.cshtml
+++ b/Doan1/Doan1/Areas/Admin/Views/Product/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<Model.EF.Product>
+﻿@model List<Model.ViewModel.ProductViewModel>
 
 @{
     ViewBag.Title = "Index";
@@ -54,10 +54,10 @@
                 Ngày tạo
             </th>
             <th style="border: 1px solid #ccc;">
-                Mã nhà cung cấp
+                Nhà cung cấp
             </th>
             <th style="border: 1px solid #ccc;">
-                Mã loại sản phẩm
+                Loại sản phẩm
             </th>
             <th style="border: 1px solid #ccc;">
                 Size
@@ -108,16 +108,16 @@
                     @item.CreateDay
                 </td>
                 <td style="border: 1px solid #ccc;">
-                    @item.IdSupplier
+                    @item.NameSupplier
                 </td>
                 <td style="border: 1px solid #ccc;">
-                    @item.IdCategory
+                    @item.CategoryName
                 </td>
                 <td style="border: 1px solid #ccc;">
-                    @item.IdSize
+                    @item.NameSize
                 </td>
                 <td style="border: 1px solid #ccc;">
-                    @item.IdColor
+                    @item.NameColor
                 </td>
                 @*<td style="border: 1px solid #ccc;">
                     @item.Status
