--- a/Doan1/Doan1/Views/Product/Detail.cshtml
+++ b/Doan1/Doan1/Views/Product/Detail.cshtml
@@ -5,7 +5,7 @@
 
 }
 
-<div class="container-fluid" style="height:auto">
+<div class="container-fluid" style="height:auto; margin-top:30px!important;">
 
     <h1>Thông tin chi tiết sản phẩm</h1>
     <div class="row">
@@ -52,7 +52,9 @@
             <div style="float:right">
                 <button class="btn btn-primary" style="margin-left:150px;"> Thêm giỏ hàng</button>
 
-                <button class="btn btn-danger" style="margin-left:20px; margin-right:150px;"> Mua hàng</button>
+                <button class="btn btn-danger" style="margin-left:20px; margin-right:150px;"> 
+                     @Html.ActionLink(" Mua hàng", "AddItem", "Cart", new { productId = @Model.ProductDetail.IdProduct }, new { quantity = @Model.ProductDetail.Quantity }) 
+               </button>
             </div>
 
         </div>
